k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: calculator-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: calculator

  template:
    metadata:
      labels:
        app: calculator

    spec:
      containers:
      - name: calculator
        image: daniyaalabbas/calculator-app:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 5000
