k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: calculator-service

spec:
  selector:
    app: calculator

  ports:
    - port: 5000
      targetPort: 5000

  type: NodePort
