k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: calculator-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: calculator.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: calculator-service
            port:
              number: 5000
